Remove sensitive files from Git history

--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -7,12 +7,22 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependencies
+node_modules/
+backend/node_modules/
+frontend/node_modules/
 
-# Editor directories and files
+# Build output
+dist/
+build/
+backend/dist/
+frontend/dist/
+
+# Configuration files
+.env
+backend/.env
+frontend/.env
+.env.*.local
 .vscode/*
 !.vscode/extensions.json
 .idea
